<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="30dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_settings" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/settings"
                    android:textAlignment="center"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:onClick="btn_send_D2D"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:onClick="enable_disable_write_log">

                    <ImageButton
                        android:id="@+id/imageButton_enable_disable_write_log"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@null"
                        android:scaleType="fitCenter" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_write_log"
                            android:textColor="#000000"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_enable_disable_write_log"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:onClick="btn_send_server_local"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:onClick="enable_disable_file_received">

                    <ImageButton
                        android:id="@+id/imageButton_enable_disable_file_received"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@null"
                        android:scaleType="fitCenter" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_file_received"
                            android:textColor="#000000"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_enable_disable_file_received"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>