<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginLeft="3dp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/type_image"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="30dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@null" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/type_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:onClick="btn_send_image"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_image" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/image"
                            android:textColor="#000000"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/image_description"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:onClick="btn_send_video"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_video" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/video"
                            android:textColor="#000000"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/video_description"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:onClick="btn_send_document"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_document" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/document"
                            android:textColor="#000000"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/document_description"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:onClick="btn_send_folder"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_folder" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/folder"
                            android:textColor="#000000"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/folder_description"
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:onClick="btn_disconnectOrImport"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_disconnectOrImportFile"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@null"
                        android:scaleType="fitCenter" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textEndOrImport"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="#000000"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/textDisconnectOrReturn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="12dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>